objects/smagicinteract__Converse_Desk_User_Config__c.object
<CustomObject>
    <description>This object will store information about which fields to be used to for showing conversation listing. This setting will be configurable per user.</description>
    <fields>
        <fullName>smagicinteract__Listing_Field__c</fullName>
        <description>Api name of the field to be displayed on the conversation listing.</description>
        <inlineHelpText>Api name of the field to be displayed on the conversation listing.</inlineHelpText>
        <label>Listing Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Message_Object_Config__c</fullName>
        <description>Stores the ID of the moc for which the config is done.</description>
        <inlineHelpText>Stores the ID of the moc for which the config is done.</inlineHelpText>
        <label>Message Object Config</label>
        <referenceTo>smagicinteract__Message_Object_Config__c</referenceTo>
        <relationshipLabel>Converse Desk User Configs</relationshipLabel>
        <relationshipName>Converse_Desk_User_Configs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Template_Field__c</fullName>
        <description>Stores which template field to show. If blank no field will be shown</description>
        <inlineHelpText>Stores which template field to show. If blank no field will be shown</inlineHelpText>
        <label>Template Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the ID of the user for whom the config is done.</description>
        <inlineHelpText>Stores the ID of the user for whom the config is done.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Converse_Desk_User_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Converse Desk User Config</label>
    <nameField>
        <displayFormat>CDUC-{00000000}</displayFormat>
        <label>Converse Desk User Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Converse Desk User Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>